# Cartesian_BAT_converter

./: .gitignore  LICENSE  README.md  test_integration.sh  validate_bat.py
cpp/: CMakeLists.txt  main_bat.cpp  test.cpp  test_backbone_frame.cpp  test_bat_coords.cpp  test_bat_roundtrip.cpp  test_bat_writer.cpp  test_bfs_tree.cpp  test_bonds.cpp  test_pdb_roundtrip.cpp
cpp/core/: geometry.cpp  vec3_ops.cpp
cpp/include/bat/: bat_coords.hpp  bat_reconstruct.hpp
cpp/include/cartesian/: geometry.hpp  vec3.hpp
cpp/include/chem/: covalent_radii.hpp  valence.hpp
cpp/include/geometry/: geometry.hpp  pdb_reader.hpp  structure.hpp
cpp/include/io/: bat_writer.hpp  pdb_reader.hpp
cpp/include/structure/: bfs_tree.hpp  bond_inference.hpp  protein_root.hpp  structure.hpp  structure_graph.hpp  structures.hpp
cpp/src/bat/: bat_coords.cpp  bat_reconstruct.cpp
cpp/src/cartesian/: geometry.cpp  vec3_ops.cpp  vec3_ops.hpp
cpp/src/io/: bat_writer.cpp  pdb_reader.cpp
cpp/src/structure/: bfs_tree.cpp  bond_inference.cpp  protein_root.cpp  structure.cpp  structure_graph.cpp
python/: cartesian_bat_converter.py  test_bond_angle.py  test_bond_length.py  test_torsional_angle.py  tester.py  util.py
